force-app/main/default/objects/Class__c/Class__c.object-meta.xml
<CustomObject>
    <description>&quot;Masterclasses&quot; e.Republic Edition</description>
    <label>Class</label>
    <nameField>
        <label>Class Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Classes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>