force-app/main/default/objects/Class__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <description>The brand of the class (GT, GOV, CDE, EM)</description>
    <label>Brand</label>
    <length>15</length>
    <type>Text</type>
</CustomField>