force-app/main/default/objects/Class__c/fields/Completed__c.field-meta.xml
<CustomField>
    <fullName>Completed__c</fullName>
    <description
  >Percentage of Qualified Leads out of the Lead Guarantee</description>
    <formula>Qualified_Leads__c /  Lead_Guarantee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Completed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>