force-app/main/default/objects/Class__c/fields/Content_Details_JSON__c.field-meta.xml
<CustomField>
    <fullName>Content_Details_JSON__c</fullName>
    <defaultValue>&apos;{}&apos;</defaultValue>
    <description
  >JSON storing the content fields managed in the CMS</description>
    <label>Content Details</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>