force-app/main/default/objects/Class__c/fields/Date_Up__c.field-meta.xml
<CustomField>
    <fullName>Date_Up__c</fullName>
    <description>Date the class was posted to the website.</description>
    <inlineHelpText>Date the class was posted to the website.</inlineHelpText>
    <label>Date Up</label>
    <type>Date</type>
</CustomField>