force-app/main/default/objects/Class__c/fields/Landing_Page_Link__c.field-meta.xml
<CustomField>
    <fullName>Landing_Page_Link__c</fullName>
    <formula>IF(NOT(ISBLANK(URL_Name__c)),

HYPERLINK(
&quot;https://masterclass.govtech.com/&quot;
&amp;URL_Name__c&amp;&quot;.html&quot;,
&quot;Redirect to Landing Page&quot;)

,&quot;Not Synced to CMS&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Landing Page Link</label>
    <type>Text</type>
</CustomField>