force-app/main/default/objects/Class__c/fields/Lead_Guarantee__c.field-meta.xml
<CustomField>
    <fullName>Lead_Guarantee__c</fullName>
    <description>The number of leads guaranteed to the client(s)</description>
    <label>Lead Guarantee</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>