force-app/main/default/objects/Class__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <label>Display Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>