force-app/main/default/objects/Class__c/fields/OneForm_ID__c.field-meta.xml
<CustomField>
    <fullName>OneForm_ID__c</fullName>
    <description>OneForm&apos;s MySQL id for the event.</description>
    <externalId>true</externalId>
    <inlineHelpText>OneForm&apos;s MySQL id for the event.</inlineHelpText>
    <label>OneForm ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>