force-app/main/default/objects/Class__c/fields/OneForm_Link__c.field-meta.xml
<CustomField>
    <fullName>OneForm_Link__c</fullName>
    <formula>IF(OneForm_ID__c &gt; 1,


HYPERLINK(
&quot;https://cms.erepublic.com/common/classes/edit/&quot;
&amp;TEXT(OneForm_ID__c),
&quot;Open in CMS&quot;)

,&quot;Not Synced to CMS&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OneForm Link</label>
    <type>Text</type>
</CustomField>