force-app/main/default/objects/Class__c/fields/OneForm_Report__c.field-meta.xml
<CustomField>
    <fullName>OneForm_Report__c</fullName>
    <description
  >Lead export from CMS appended with module completion percentages.</description>
    <formula>IF( OneForm_ID__c &gt; 1,
HYPERLINK(
&quot;https://cms.erepublic.com/common/classes/full_report/&quot;
&amp;TEXT(OneForm_ID__c)
,
&quot;Download Report&quot;),&quot;Not Synced to CMS&quot;)</formula>
    <inlineHelpText
  >Lead export from CMS appended with module completion percentages.</inlineHelpText>
    <label>OneForm Report</label>
    <type>Text</type>
</CustomField>