force-app/main/default/objects/Class__c/fields/Qualified_Leads__c.field-meta.xml
<CustomField>
    <fullName>Qualified_Leads__c</fullName>
    <label>Qualified Leads</label>
    <summaryFilterItems>
        <field>Class_Reg__c.Non_Qual__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Class_Reg__c.Class__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>