force-app/main/default/objects/Class__c/fields/Qualifiers__c.field-meta.xml
<CustomField>
    <fullName>Qualifiers__c</fullName>
    <label>Qualifiers</label>
    <type>TextArea</type>
</CustomField>