force-app/main/default/objects/Class__c/fields/Topics__c.field-meta.xml
<CustomField>
    <fullName>Topics__c</fullName>
    <inlineHelpText
  >Displays topics for this masterclass, edit the topics in CMS only.</inlineHelpText>
    <label>Topics</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1:1 and BYOD</fullName>
            </value>
            <value>
                <fullName>Budget, Finance and HR</fullName>
            </value>
            <value>
                <fullName>Citizen Engagement</fullName>
            </value>
            <value>
                <fullName>Cloud</fullName>
            </value>
            <value>
                <fullName>Cybersecurity</fullName>
            </value>
            <value>
                <fullName>Data and Analytics</fullName>
            </value>
            <value>
                <fullName>Education Technology</fullName>
            </value>
            <value>
                <fullName>eGovernment</fullName>
            </value>
            <value>
                <fullName>Emergency Management</fullName>
            </value>
            <value>
                <fullName>Health and Human Services</fullName>
            </value>
            <value>
                <fullName>Higher Education</fullName>
            </value>
            <value>
                <fullName>Infrastructure</fullName>
            </value>
            <value>
                <fullName>IT Infrastructure</fullName>
            </value>
            <value>
                <fullName>Justice and Public Safety</fullName>
            </value>
            <value>
                <fullName>Marketing to Government</fullName>
            </value>
            <value>
                <fullName>Next-Gen Networks</fullName>
            </value>
            <value>
                <fullName>Online Learning</fullName>
            </value>
            <value>
                <fullName>Policy and Management</fullName>
            </value>
            <value>
                <fullName>Social and Mobile</fullName>
            </value>
            <value>
                <fullName>Technology</fullName>
            </value>
            <value>
                <fullName>Transportation</fullName>
            </value>
            <value>
                <fullName>Workforce</fullName>
            </value>
            <value>
                <fullName>Recruitment and Retention</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>K-12 Education</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>COVID Resources</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>