force-app/main/default/objects/Class__c/fields/Total_Registrations__c.field-meta.xml
<CustomField>
    <fullName>Total_Registrations__c</fullName>
    <label>Total Registrations</label>
    <summaryForeignKey>Class_Reg__c.Class__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>