force-app/main/default/objects/Class__c/fields/URL_Name__c.field-meta.xml
<CustomField>
    <fullName>URL_Name__c</fullName>
    <description>the URI parameter used to lookup a specific class</description>
    <inlineHelpText
  >the URI parameter used to lookup a specific class</inlineHelpText>
    <label>URL Name</label>
    <length>160</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>