force-app/main/default/objects/Class__c/listViews/Active_Classes.listView-meta.xml
<ListView>
    <fullName>Active_Classes</fullName>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <columns>Status__c</columns>
    <columns>Date_Up__c</columns>
    <columns>Lead_Guarantee__c</columns>
    <columns>Qualified_Leads__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>Active Classes</label>
</ListView>